--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,15 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "doctrine/dbal": "^2.9",
+        "guzzlehttp/guzzle": "^6.3",
+        "illuminate/mail": "^6.1",
+        "jrm2k6/cloudder": "^0.6.0",
+        "pusher/pusher-php-server": "^4.0",
+        "simplesoftwareio/simple-qrcode": "^2.0",
+        "tymon/jwt-auth": "^1.0@dev",
+        "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
