--- a/.env
+++ b/.env
@@ -25,13 +25,13 @@ REDIS_PORT=6379
 
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.googlemail.com
+MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
-MAIL_USERNAME=goalsetterapp@gmail.com
-MAIL_PASSWORD=goalsetterapp2019
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=SG.y2tmqhtwTmKwV7ocnl2dsw.5t8_gMhAwiHy8pYouRk2pyJy8-KhfsLPpP99O0oNHIk
 MAIL_ENCRYPTION=tls
-MAIL_FROM_NAME="Gate Pass"
-MAIL_FROM_ADDRESS=noreply@gatepass.com
+MAIL_FROM_NAME="BetaRides"
+MAIL_FROM_ADDRESS=noreply@BetaRides.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -45,3 +45,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+CLOUDINARY_API_KEY=811293528829713
+CLOUDINARY_API_SECRET=MTv32-FLRPKqeBg1uUO-UUnimGI
+CLOUDINARY_CLOUD_NAME=getfiledata
