--- a/.env
+++ b/.env
@@ -25,10 +25,10 @@ REDIS_PORT=6379
 
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.googlemail.com
+MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
-MAIL_USERNAME=goalsetterapp@gmail.com
-MAIL_PASSWORD=juniwanttoupdatepass6545
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=SG.y2tmqhtwTmKwV7ocnl2dsw.5t8_gMhAwiHy8pYouRk2pyJy8-KhfsLPpP99O0oNHIk
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="BetaRides"
 MAIL_FROM_ADDRESS=noreply@BetaRides.com
