--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.sendgrid.net
 MAIL_PORT=587
 MAIL_USERNAME=apikey
-MAIL_PASSWORD=SG.y2tmqhtwTmKwV7ocnl2dsw.5t8_gMhAwiHy8pYouRk2pyJy8-KhfsLPpP99O0oNHIk
+MAIL_PASSWORD=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
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="BetaRides"
 MAIL_FROM_ADDRESS=noreply@BetaRides.com
