--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=B1DlwX772O
-DB_USERNAME=B1DlwX772O
-DB_PASSWORD=ZmeqlQqHWf
+DB_DATABASE=MwpsgBVjJn
+DB_USERNAME=MwpsgBVjJn
+DB_PASSWORD=KuVcSTRWoN
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
