--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0",
         "doctrine/dbal": "^2.9",
+        "fideloper/proxy": "^4.0",
+        "google/apiclient": "^2.4",
         "guzzlehttp/guzzle": "^6.3",
         "illuminate/mail": "^6.1",
         "jrm2k6/cloudder": "^0.6.0",
+        "laravel/framework": "^6.2",
+        "laravel/socialite": "^4.2",
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^4.0",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "tymon/jwt-auth": "^1.0@dev",
