--- a/.env
+++ b/.env
@@ -23,6 +23,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+GOOGLE_SECRET=XXpVPCwIQ7tuH1nLn7gsY2O8
+GOOGLE_CLIENT_ID=749484537637-martirjojlc53m3rh3l787vdpnc2pcle.apps.googleusercontent.com
+GOOGLE_REDIRECT=https://hackathon-nddc.herokuapp.com
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.sendgrid.net
@@ -30,8 +33,8 @@ MAIL_PORT=587
 MAIL_USERNAME=apikey
 MAIL_PASSWORD=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
 MAIL_ENCRYPTION=tls
-MAIL_FROM_NAME="BetaRides"
-MAIL_FROM_ADDRESS=noreply@BetaRides.com
+MAIL_FROM_NAME="NDDC Tracker"
+MAIL_FROM_ADDRESS=noreply@nddc-tracker.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
