--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/socialite": "^4.2",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "nexmo/client": "^2.0",
         "pusher/pusher-php-server": "^4.0",
         "simplesoftwareio/simple-qrcode": "^2.0",
         "tymon/jwt-auth": "^1.0@dev",
